# JPSUB

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  HANDOFF.md  README.md  pyproject.toml  start-dev.cmd  日语视频转中文字幕_Tauri技术架构文档.md
.github/workflows/: ci-release.yml
engine/: README.md  __init__.py  asr.py  cli.py  media.py  model_cache.py  models.py  orchestrator.py  requirements.txt  server.py  sidecar.py  subtitle.py  translate.py
scripts/: start-dev.ps1
shell/src-tauri/: Cargo.toml  tauri.conf.json
shell/src-tauri/capabilities/: default.json
shell/src-tauri/src/: lib.rs  main.rs
tests/: test_orchestrator_errors.py  test_server_segments.py  test_translate.py
ui/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.css  App.tsx
