[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jpsub-engine"
version = "0.1.0"
description = "日语视频转中文字幕引擎(识别 + 翻译 + 字幕)"
readme = "engine/README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "faster-whisper",
    "huggingface-hub",
    "fastapi",
    "uvicorn[standard]",
    "sse-starlette",
    "httpx",
    "pysubs2",
    "srt",
    "pydantic>=2",
]

[project.optional-dependencies]
gpu = ["nvidia-cublas-cu12", "nvidia-cudnn-cu12"]
dev = ["ruff", "black", "mypy", "pytest", "pre-commit", "pyinstaller"]

[project.scripts]
jpsub = "engine.cli:main"
jpsub-server = "engine.server:main"

[tool.hatch.build.targets.wheel]
packages = ["engine"]

# ---------------------------------------------------------------------------
# 代码规范
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["engine"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]  # 行宽交给 black

[tool.ruff.lint.isort]
known-first-party = ["engine"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
ignore_missing_imports = true   # faster_whisper / pysubs2 等无类型存根
files = ["engine"]
