[package]
name = "jpsub"
version = "0.1.0"
description = "日语视频转中文字幕"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "jpsub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]

# clippy 严格度
[lints.clippy]
all = "warn"
